updated times table

--- a/HTML/timetableparser/public/index.html
+++ b/HTML/timetableparser/public/index.html
@@ -30,52 +30,56 @@
         <div class="p3">3<br>9:30 - 10:10</div>
         <div class="p4">4<br>10:15 - 10:55</div>
 
-        <div class="break">break<br>11:00 - 11:40</div>
-        <div class="break1">break<br>press CTRL + SHIFT + A to open the need tabs for this lesson</div>
+        <div class="break1">break<br>11:00 - 11:40</div>
+        <div class="break12">break<br>press CTRL + SHIFT + A to open the need tabs for this lesson</div>
 
         <div class="p6">6<br>11:45 - 12:25</div>
-        <div class="p7">7<br>12:30 - 1:10</div>
+        
+        <div class="break2">break<br>12:25 - 12:35</div>
+        <div class="break22">break<br>press CTRL + SHIFT + A to open the need tabs for this lesson</div>
+
+        <div class="p7">7<br>12:35 - 1:15</div>
         <div class="p8">8<br>1:15 - 1:55</div>
 
-        <div class="period11" id="period11">Arabic</div>
-        <div class="period12" id="period12">Electives</div>
-        <div class="period13" id="period13">science</div>
-        <div class="period14" id="period14">Math</div>
-        <div class="period15" id="period15">English</div>
-        <div class="period16" id="period16">Islamic</div>
+        <div class="period11" id="period11">Math</div>
+        <div class="period12" id="period12">science</div>
+        <div class="period13" id="period13">Electives</div>
+        <div class="period14" id="period14">Arabic</div>
+        <div class="period15" id="period15">Islamic</div>
+        <div class="period16" id="period16">English</div>
         <div class="period17" id="period17">Pe</div>
 
-        <div class="period21" id="period21">science</div>
+        <div class="period21" id="period21">Arabic</div>
         <div class="period22" id="period22">Electives</div>
-        <div class="period23" id="period23">Arabic</div>
-        <div class="period24" id="period24">Math</div>
-        <div class="period25" id="period25">Pe</div>
-        <div class="period26" id="period26">Moral Education</div>
-        <div class="period27" id="period27">English</div>
+        <div class="period23" id="period23">science</div>
+        <div class="period24" id="period24">Islamic</div>
+        <div class="period25" id="period25">English</div>
+        <div class="period26" id="period26">Math</div>
+        <div class="period27" id="period27">PE</div>
 
-        <div class="period31" id="period31">Arabic</div>
-        <div class="period32" id="period32">Math</div>
-        <div class="period33" id="period33">Electives</div>
-        <div class="period34" id="period34">Pe</div>
-        <div class="period35" id="period35">science</div>
-        <div class="period36" id="period36">English</div>
-        <div class="period37" id="period37">Islamic</div>
+        <div class="period31" id="period31">English</div>
+        <div class="period32" id="period32">Islamic</div>
+        <div class="period33" id="period33">Math</div>
+        <div class="period34" id="period34">Electives</div>
+        <div class="period35" id="period35">Moral Education</div>
+        <div class="period36" id="period36">Arabic</div>
+        <div class="period37" id="period37">science</div>
 
-        <div class="period41" id="period41">English</div>
-        <div class="period42" id="period42">Electives</div>
-        <div class="period43" id="period43">Math</div>
-        <div class="period44" id="period44">Islamic</div>
-        <div class="period45" id="period45">Math</div>
-        <div class="period46" id="period46">Arabic</div>
-        <div class="period47" id="period47">science</div>
+        <div class="period41" id="period41">PE</div>
+        <div class="period42" id="period42">Arabic</div>
+        <div class="period43" id="period43">Electives</div>
+        <div class="period44" id="period44">Math</div>
+        <div class="period45" id="period45">science</div>
+        <div class="period46" id="period46">English</div>
+        <div class="period47" id="period47">Math</div>
 
-        <div class="period51" id="period51">Pe</div>
-        <div class="period52" id="period52">English</div>
-        <div class="period53" id="period53">Electives</div>
-        <div class="period54" id="period54">English</div>
-        <div class="period55" id="period55">Arabic</div>
-        <div class="period56" id="period56">science</div>
-        <div class="period57" id="period57">Math</div>
+        <div class="period51" id="period51">English</div>
+        <div class="period52" id="period52">science</div>
+        <div class="period53" id="period53">Math</div>
+        <div class="period54" id="period54">Electives</div>
+        <div class="period55" id="period55">PE</div>
+        <div class="period56" id="period56">English</div>
+        <div class="period57" id="period57">Arabic</div>
     </div>
     <script src="sketch.js">
 
