--- a/HTML/timetableparser/public/index.html
+++ b/HTML/timetableparser/public/index.html
@@ -19,6 +19,7 @@
 <body style="background-color: #46454e; margin: 0px;">
 
     <div id="mySidebar" class="sidebar" onmouseover="toggleSidebar()" onmouseout="toggleSidebar()">
+        <a id="title" href="https://time-table-reminder.firebaseapp.com"><span><i class="material-icons">book_online</i></span><span class="icon-text">Time Table Reminder</span></a>
         <a href="#" onclick="tab2('Science');"><span><i class="material-icons">science</i><span class="icon-text">Science</span></a><br>
         <a href="#" onclick="tab2('Electives');"><i class="material-icons">lightbulb</i><span class="icon-text"></span>Electives</a></span>
         </a><br>
