--- a/HTML/timetableparser/public/index.html
+++ b/HTML/timetableparser/public/index.html
@@ -10,7 +10,7 @@
     <link href="daystyle.css" rel="stylesheet" type="text/css">
     <link href="sidebarCSS.css" rel="stylesheet" type="text/css">
     <link rel="icon"
-        href="https://cdn.glitch.com/348880f4-28cd-46f9-a35b-a5e6d6061d82%2Fcalendar-icon-white-18.jpg?v=1606365045468">
+        href="https://time-table-reminder.firebaseapp.com/calendar-icon-white.jpg">
     <link href="leftstyle.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -56,45 +56,45 @@
             <div class="p7">6<br>12:35 - 1:15</div>
             <div class="p8">7<br>1:15 - 1:55</div>
 
-            <div class="period11" id="period11">Math</div>
-            <div class="period12" id="period12">science</div>
-            <div class="period13" id="period13">Electives</div>
-            <div class="period14" id="period14">Arabic</div>
-            <div class="period15" id="period15">Islamic</div>
-            <div class="period16" id="period16">English</div>
-            <div class="period17" id="period17">Pe</div>
+            <div class="period11" id="period11">English</div>
+            <div class="period12" id="period12">Math</div>
+            <div class="period13" id="period13">ESS</div>
+            <div class="period14" id="period14">Electives</div>
+            <div class="period15" id="period15">Science</div>
+            <div class="period16" id="period16">Arabic</div>
+            <div class="period17" id="period17">Islamic</div>
 
-            <div class="period21" id="period21">Arabic</div>
-            <div class="period22" id="period22">Electives</div>
-            <div class="period23" id="period23">science</div>
-            <div class="period24" id="period24">Islamic</div>
+            <div class="period21" id="period21">Math</div>
+            <div class="period22" id="period22">ESS</div>
+            <div class="period23" id="period23">Math</div>
+            <div class="period24" id="period24">Electives</div>
             <div class="period25" id="period25">English</div>
-            <div class="period26" id="period26">Math</div>
-            <div class="period27" id="period27">PE</div>
+            <div class="period26" id="period26">Science</div>
+            <div class="period27" id="period27">Arabic</div>
 
             <div class="period31" id="period31">English</div>
-            <div class="period32" id="period32">Islamic</div>
-            <div class="period33" id="period33">Math</div>
+            <div class="period32" id="period32">Arabic</div>
+            <div class="period33" id="period33">Science</div>
             <div class="period34" id="period34">Electives</div>
-            <div class="period35" id="period35">Moral Education</div>
-            <div class="period36" id="period36">Arabic</div>
-            <div class="period37" id="period37">science</div>
+            <div class="period35" id="period35">Math</div>
+            <div class="period36" id="period36">ESS</div>
+            <div class="period37" id="period37">Moral Education</div>
 
-            <div class="period41" id="period41">PE</div>
-            <div class="period42" id="period42">Arabic</div>
-            <div class="period43" id="period43">Electives</div>
-            <div class="period44" id="period44">Math</div>
-            <div class="period45" id="period45">science</div>
-            <div class="period46" id="period46">English</div>
-            <div class="period47" id="period47">Math</div>
+            <div class="period41" id="period41">English</div>
+            <div class="period42" id="period42">Science</div>
+            <div class="period43" id="period43">Math</div>
+            <div class="period44" id="period44">Electives</div>
+            <div class="period45" id="period45">Islamic</div>
+            <div class="period46" id="period46">ESS</div>
+            <div class="period47" id="period47">Arabic</div>
 
             <div class="period51" id="period51">English</div>
-            <div class="period52" id="period52">science</div>
-            <div class="period53" id="period53">Math</div>
-            <div class="period54" id="period54">Electives</div>
-            <div class="period55" id="period55">PE</div>
+            <div class="period52" id="period52">ESS</div>
+            <div class="period53" id="period53">Science</div>
+            <div class="period54" id="period54">Arabic</div>
+            <div class="period55" id="period55">Math</div>
             <div class="period56" id="period56">English</div>
-            <div class="period57" id="period57">Arabic</div>
+            <div class="period57" id="period57">Islamic</div>
         </div>
     </div>
     <script src="sidebarJS.js"></script>
