--- a/HTML/timetableparser/public/404.html
+++ b/HTML/timetableparser/public/404.html
@@ -20,6 +20,7 @@
         body { border-top: 16px solid #ffa100; }
       }
     </style>
+    <link rel="icon" href="https://time-table-reminder.firebaseapp.com/calendar-icon-white.jpg">
   </head>
   <body>
     <div id="message">
