--- a/HTML/timetableparser/public/index.html
+++ b/HTML/timetableparser/public/index.html
@@ -1,60 +1,68 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
     <!-- links and meta data for website functioning -->
     <!-- please  vist my github repository for more info about this project -->
-    <!--  -->
     <meta charset="utf-8">
     <link rel="stylesheet" href="text.css">
     <script type="text/javascript" defer src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     <script type="text/javascript" defer src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/addons/p5.sound.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <link href="periodstyle.css" rel="stylesheet" type="text/css">
-    <link href="daystyle.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="gridStyleing.css">
-    <link href="sidebarCSS.css" rel="stylesheet" type="text/css">
+    <!-- scripts for sign in and main functionality part of this program -->
+    <!-- do not remove i repeat do not remove -->
+    <!-- i dont think its effeciant to put all the code in one file but its already done -->
+    <script src="globalvars.js"></script>
+    <script src="https://apis.google.com/js/platform.js"  defer></script>
+    <script src="Main.js"></script>
+    <script defer async src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()"
+    onreadystatechange="if (this.readyState === 'complete') this.onload()"></script>
+    <script src="googleCode.js"></script>
+    <link href="periodstyle.css" rel="stylesheet" type="text/css"/>
+    <link href="daystyle.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="gridStyleing.css"/>
+    <link href="sidebarCSS.css" rel="stylesheet" type="text/css"/>
     <meta name="google-signin-client_id"
-        content="53486922153-8rhm1bn76auo7hdd63gst568hlvqe6vj.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <link rel="icon" href="https://time-table-reminder.firebaseapp.com/calendar-icon-white.jpg">
-    <link href="leftstyle.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        content="53486922153-8rhm1bn76auo7hdd63gst568hlvqe6vj.apps.googleusercontent.com"/>
+        <link rel="icon" href="https://time-table-reminder.firebaseapp.com/calendar-icon-white.jpg">
+    <link href="leftstyle.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <title>Time Table Reminder - Made by Abdalrhman</title>
 </head>
 
 <body>
+    <audio src="ES_Beep Tone Signal 54 - SFX Producer.mp3" id="audio"></audio>
     <!-- side bar -->
     <div id="mySidebar" class="sidebar" onmouseover="toggleSidebar()" onmouseout="toggleSidebar()">
         <a id="title" href="https://time-table-reminder.firebaseapp.com"><span><i
                     class="material-icons">book_online</i></span><span class="icon-text">Time Table Reminder</span></a>
 
-        <a href="#" onclick="tab2('Science');"><span><i class="material-icons">science</i></span><span
+        <a class="pointer" onclick="tab2('Science');"><span><i class="material-icons">science</i></span><span
                 class="icon-text">Science</span></a>
-                <br>
-        <a href="#" onclick="tab2('Electives');"><span><i class="material-icons">lightbulb</i></span><span
+        <br>
+        <a class="pointer" onclick="tab2('Electives');"><span><i class="material-icons">lightbulb</i></span><span
                 class="icon-text">Electives</span></a>
-                <br>
-        <a href="#" onclick="tab2('Arabic');"><span><i class="material-icons">local_library</i></span><span
+        <br>
+        <a class="pointer" onclick="tab2('Arabic');"><span><i class="material-icons">local_library</i></span><span
                 class="icon-text">Arabic</span></span></a>
-                <br>
-        <a href="#" onclick="tab2('English');"><span><i class="material-icons">local_library</i></span><span
+        <br>
+        <a class="pointer" onclick="tab2('English');"><span><i class="material-icons">local_library</i></span><span
                 class="icon-text"></span>English</span></a>
-                <br>
-        <a href="#" onclick="tab2('Math');"><span><i class="material-icons">plus_one</i></span><span
+        <br>
+        <a class="pointer" onclick="tab2('Math');"><span><i class="material-icons">plus_one</i></span><span
                 class="icon-text">Math</span></a>
-                <br>
-        <a href="#" onclick="tab2('Islamic');"><span><i class="material-icons">face</i></span><span
+        <br>
+        <a class="pointer" onclick="tab2('Islamic');"><span><i class="material-icons">face</i></span><span
                 class="icon-text">Islamic</span></a>
-                <br>
-        <a href="#" onclick="tab2('ESS');"><span><i class="material-icons">history_edu</i></span><span
+        <br>
+        <a class="pointer" onclick="tab2('ESS');"><span><i class="material-icons">history_edu</i></span><span
                 class="icon-text">World History</span></a>
-                <br>
-        <a id="openbtn" href="#" onclick="switchForm()"><span><i class="material-icons">account_circle</i></span><span
+        <br>
+        <a class="pointer" id="openbtn" onclick="switchForm()"><span><i class="material-icons">account_circle</i></span><span
                 class="icon-text">Open</span></a>
     </div>
-    <!-- Sign in Form, using google sign in, this is opened through the switchForm and openForm methods in sketch.js -->
+    <!-- Sign in Form, using google sign in, this is opened through the switchForm and openForm methods in Main.js -->
     <div class="form-popup" id="myForm">
         <div class="form-container">
             <label for="authuser">
@@ -65,8 +73,7 @@
             </label>
             <input onchange="authuserChange()" type="number" id="authuser" name="authuser">
             <br>
-            <br>
-            <div id="authorize_button" class="g-signin2" data-onsuccess="onSignIn"></div>
+            <br><div id="authorize_button" class="g-signin2" data-onsuccess="onSignIn"></div>
             <br>
             <button id="signout_button" class="btn" onclick="signOut()">Sign out :(</button>
             <button class="btn" onclick="closeForm()">Close</button>
@@ -94,52 +101,48 @@
             <div class="break12">break<br>press CTRL + SHIFT + A to open the need tabs for this lesson</div>
 
             <div class="p6">5<br>11:45 - 12:25</div>
-
-            <div class="break2">break<br>12:25 - 12:35</div>
-            <div class="break22">break<br>press CTRL + SHIFT + A to open the need tabs for this lesson</div>
-
             <div class="p7">6<br>12:35 - 1:15</div>
             <div class="p8">7<br>1:15 - 1:55</div>
             <!-- main cells of the table -->
-            <div class="period11" id="period11">English</div>
-            <div class="period12" id="period12">Math</div>
-            <div class="period13" id="period13">ESS</div>
-            <div class="period14" id="period14">Electives</div>
-            <div class="period15" id="period15">Science</div>
+            <div class="period11" id="period11">Moral Education</div>
+            <div class="period12" id="period12">ESS</div>
+            <div class="period13" id="period13">Electives</div>
+            <div class="period14" id="period14">English</div>
+            <div class="period15" id="period15">Math</div>
             <div class="period16" id="period16">Arabic</div>
-            <div class="period17" id="period17">Islamic</div>
+            <div class="period17" id="period17">Science</div>
 
-            <div class="period21" id="period21">Math</div>
+            <div class="period21" id="period21">Islamic</div>
             <div class="period22" id="period22">ESS</div>
             <div class="period23" id="period23">Math</div>
-            <div class="period24" id="period24">Electives</div>
-            <div class="period25" id="period25">English</div>
-            <div class="period26" id="period26">Science</div>
-            <div class="period27" id="period27">Arabic</div>
+            <div class="period24" id="period24">English</div>
+            <div class="period25" id="period25">Arabic</div>
+            <div class="period26" id="period26">English</div>
+            <div class="period27" id="period27">Science</div>
 
-            <div class="period31" id="period31">English</div>
-            <div class="period32" id="period32">Arabic</div>
+            <div class="period31" id="period31">Arabic</div>
+            <div class="period32" id="period32">Electives</div>
             <div class="period33" id="period33">Science</div>
-            <div class="period34" id="period34">Electives</div>
+            <div class="period34" id="period34">English</div>
             <div class="period35" id="period35">Math</div>
-            <div class="period36" id="period36">ESS</div>
-            <div class="period37" id="period37">Moral Education</div>
+            <div class="period36" id="period36">Islamic</div>
+            <div class="period37" id="period37">ESS</div>
 
-            <div class="period41" id="period41">English</div>
-            <div class="period42" id="period42">Science</div>
-            <div class="period43" id="period43">Math</div>
+            <div class="period41" id="period41">Arabic</div>
+            <div class="period42" id="period42">English</div>
+            <div class="period43" id="period43">Science</div>
             <div class="period44" id="period44">Electives</div>
-            <div class="period45" id="period45">Islamic</div>
-            <div class="period46" id="period46">ESS</div>
-            <div class="period47" id="period47">Arabic</div>
+            <div class="period45" id="period45">Math</div>
+            <div class="period46" id="period46">Islamic</div>
+            <div class="period47" id="period47">ESS</div>
 
             <div class="period51" id="period51">English</div>
-            <div class="period52" id="period52">ESS</div>
-            <div class="period53" id="period53">Science</div>
-            <div class="period54" id="period54">Arabic</div>
-            <div class="period55" id="period55">Math</div>
-            <div class="period56" id="period56">English</div>
-            <div class="period57" id="period57">Islamic</div>
+            <div class="period52" id="period52">Science</div>
+            <div class="period53" id="period53">Electives</div>
+            <div class="period54" id="period54">Math</div>
+            <div class="period55" id="period55">ESS</div>
+            <div class="period56" id="period56">Arabic</div>
+            <div class="period57" id="period57">Math</div>
         </div>
         <!-- this is the personalized part of the program, this is opened through the side bar button -->
         <div id="personalised" class="personalised">
@@ -149,25 +152,20 @@
                     <h1 class="text" id="Greetings">Hello There</h1>
                     <h3 class="text" id="Greetings_email">sign in to see all data</h3>
                     <button
-                        style="border: none;color: white;padding: 15px 32px;text-align: center;text-decoration: none;display: inline-block;font-size: 16px;margin: 4px 2px;cursor: pointer;background-color: #555555;"
+                    class="btn"
                         onclick="listCourses()">List Courses</button>
                     <button id="openFormBtn"
-                        style="border: none;color: white;padding: 15px 32px;text-align: center;text-decoration: none;display: none;font-size: 16px;margin: 4px 2px;cursor: pointer;background-color: #555555;position:absolute;right:50px;top:10px;"
+                    class="open-button btn"
+                        style="right:50px;top:10px;"
                         onclick="openForm()">Sign-In Form</button>
                     <div id="content"
                         style="display: grid;grid-template-columns: repeat(13, 1fr);grid-auto-rows: 75px;border-radius: 5px;">
                     </div>
+                    
                 </div>
             </div>
         </div>
     </div>
-    <!-- scripts for sign in and main functionality part of this program -->
-    <!-- do not remove i repeat do not remove -->
-    <!-- i dont think its effeciant to put all the code in one file but its already done -->
-    <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()"
-        onreadystatechange="if (this.readyState === 'complete') this.onload()">
-    </script>
-    <script src="sketch.js"></script>
 </body>
 
 </html>
