--- a/HTML/timetableparser/public/learn more.html
+++ b/HTML/timetableparser/public/learn more.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="text.css">
   <link rel="icon" href="https://time-table-reminder.firebaseapp.com/calendar-icon-white.jpg">
   <title>Time Table Reminder - Made by Abdalrhman</title>
